--- a/client/src/components/Navigation/style.css
+++ b/client/src/components/Navigation/style.css
@@ -1,3 +1,10 @@
 .logOutText  {
     color: white
 }
+
+body {background-color: rgba(255, 153, 0, 0.301);}
+
+#coolfont {
+    font-family: 'Bangers', cursive;
+    color:brown;
+}
